# serializer version: 1
# name: TestInsight.test_listing_insights_does_not_nplus1
  '''
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."credentials_reviewed_at",
         "posthog_user"."requested_2fa_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."is_active",
         "posthog_user"."role_at_organization",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."allow_impersonation",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."allow_sidebar_suggestions",
         "posthog_user"."shortcut_position",
         "posthog_user"."passkeys_enabled_for_2fa",
         "posthog_user"."hide_mcp_hints",
         "posthog_user"."ui_configuration",
         "posthog_user"."onboarding_skipped_at",
         "posthog_user"."onboarding_skipped_reason",
         "posthog_user"."onboarding_skipped_organization_id",
         "posthog_user"."onboarding_delegated_to_invite_id",
         "posthog_user"."onboarding_delegated_to_organization_id",
         "posthog_user"."onboarding_delegation_accepted_at",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_user"
  WHERE ("posthog_user"."is_active"
         AND "posthog_user"."id" = 99999)
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.1
  '''
  SELECT "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."is_active",
         "posthog_organization"."is_not_active_reason",
         "posthog_organization"."session_cookie_age",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."is_ai_data_processing_approved",
         "posthog_organization"."is_ai_training_opted_in",
         "posthog_organization"."is_ai_training_locked",
         "posthog_organization"."is_ai_training_cta_shown",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."enforce_verified_domains",
         "posthog_organization"."members_can_invite",
         "posthog_organization"."members_can_create_projects",
         "posthog_organization"."members_can_use_personal_api_keys",
         "posthog_organization"."members_can_see_org_members",
         "posthog_organization"."allow_publicly_shared_resources",
         "posthog_organization"."read_only_mcp_access",
         "posthog_organization"."default_role_id",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."default_experiment_stats_method",
         "posthog_organization"."default_anonymize_ips",
         "posthog_organization"."is_hipaa",
         "posthog_organization"."is_pending_deletion",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."has_active_subscription",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."is_platform"
  FROM "posthog_organization"
  WHERE "posthog_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.10
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."parent_team_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."onboarding_tasks",
         "posthog_team"."ingested_event",
         "posthog_team"."ingested_production_event",
         "posthog_team"."ingested_production_event_last_checked_at",
         "posthog_team"."person_processing_opt_out",
         "posthog_team"."secret_api_token",
         "posthog_team"."secret_api_token_backup",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_recording_masking_config",
         "posthog_team"."session_recording_url_trigger_config",
         "posthog_team"."session_recording_url_blocklist_config",
         "posthog_team"."session_recording_event_trigger_config",
         "posthog_team"."session_recording_trigger_match_type_config",
         "posthog_team"."session_recording_trigger_groups",
         "posthog_team"."session_replay_config",
         "posthog_team"."session_recording_retention_period",
         "posthog_team"."event_retention_months",
         "posthog_team"."conversations_enabled",
         "posthog_team"."conversations_settings",
         "posthog_team"."proactive_tasks_enabled",
         "posthog_team"."survey_config",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."product_tours_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."capture_dead_clicks",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."logs_settings",
         "posthog_team"."llm_gateway_enabled_at",
         "posthog_team"."llm_gateway_revoked_at",
         "posthog_team"."llm_gateway_overspend_allowance_usd",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."receive_org_level_activity_logs",
         "posthog_team"."web_analytics_pre_aggregated_tables_enabled",
         "posthog_team"."web_analytics_pre_aggregated_tables_version",
         "posthog_team"."flags_persistence_default",
         "posthog_team"."feature_flag_confirmation_enabled",
         "posthog_team"."feature_flag_confirmation_message",
         "posthog_team"."default_evaluation_environments_enabled",
         "posthog_team"."require_evaluation_environment_tags",
         "posthog_team"."default_evaluation_contexts_enabled",
         "posthog_team"."require_evaluation_contexts",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."human_friendly_comparison_periods",
         "posthog_team"."cookieless_server_hash_mode",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."default_data_theme",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at",
         "posthog_team"."api_query_rate_limit",
         "posthog_team"."drop_events_older_than",
         "posthog_team"."base_currency",
         "posthog_team"."experiment_recalculation_time",
         "posthog_team"."default_experiment_confidence_level",
         "posthog_team"."default_experiment_stats_method",
         "posthog_team"."business_model"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.11
  '''
  SELECT "posthog_filesystem"."team_id",
         "posthog_filesystem"."id",
         "posthog_filesystem"."path",
         "posthog_filesystem"."depth",
         "posthog_filesystem"."type",
         "posthog_filesystem"."ref",
         "posthog_filesystem"."href",
         "posthog_filesystem"."shortcut",
         "posthog_filesystem"."meta",
         "posthog_filesystem"."created_at",
         "posthog_filesystem"."created_by_id",
         "posthog_filesystem"."surface",
         "posthog_filesystem"."project_id"
  FROM "posthog_filesystem"
  WHERE (("posthog_filesystem"."surface" IS NULL
          OR "posthog_filesystem"."surface" = 'web')
         AND "posthog_filesystem"."ref" = '0001'
         AND "posthog_filesystem"."team_id" = 99999
         AND "posthog_filesystem"."type" = 'insight'
         AND NOT ("posthog_filesystem"."shortcut"
                  AND "posthog_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.12
  '''
  SELECT "posthog_insightviewed"."id",
         "posthog_insightviewed"."team_id",
         "posthog_insightviewed"."user_id",
         "posthog_insightviewed"."insight_id",
         "posthog_insightviewed"."last_viewed_at"
  FROM "posthog_insightviewed"
  WHERE ("posthog_insightviewed"."insight_id" = 99999
         AND "posthog_insightviewed"."team_id" = 99999
         AND "posthog_insightviewed"."user_id" = 99999)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.13
  '''
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."text_id",
         "posthog_dashboardtile"."button_tile_id",
         "posthog_dashboardtile"."widget_id",
         "posthog_dashboardtile"."team_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboardtile"."last_refresh",
         "posthog_dashboardtile"."refreshing",
         "posthog_dashboardtile"."refresh_attempt",
         "posthog_dashboardtile"."filters_overrides",
         "posthog_dashboardtile"."show_description",
         "posthog_dashboardtile"."transparent_background",
         "posthog_dashboardtile"."deleted"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  WHERE (NOT ("posthog_dashboardtile"."deleted"
              AND "posthog_dashboardtile"."deleted" IS NOT NULL)
         AND NOT ("posthog_dashboard"."deleted")
         AND "posthog_dashboardtile"."insight_id" = 99999)
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.14
  '''
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."text_id",
         "posthog_dashboardtile"."button_tile_id",
         "posthog_dashboardtile"."widget_id",
         "posthog_dashboardtile"."team_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboardtile"."last_refresh",
         "posthog_dashboardtile"."refreshing",
         "posthog_dashboardtile"."refresh_attempt",
         "posthog_dashboardtile"."filters_overrides",
         "posthog_dashboardtile"."show_description",
         "posthog_dashboardtile"."transparent_background",
         "posthog_dashboardtile"."deleted"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  WHERE (NOT ("posthog_dashboardtile"."deleted"
              AND "posthog_dashboardtile"."deleted" IS NOT NULL)
         AND NOT ("posthog_dashboard"."deleted")
         AND "posthog_dashboardtile"."insight_id" = 99999)
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.15
  '''
  SELECT "posthog_insightvariable"."id",
         "posthog_insightvariable"."name",
         "posthog_insightvariable"."code_name",
         "posthog_insightvariable"."type",
         "posthog_insightvariable"."default_value",
         "posthog_insightvariable"."is_multi"
  FROM "posthog_insightvariable"
  INNER JOIN "posthog_team" ON ("posthog_insightvariable"."team_id" = "posthog_team"."id")
  WHERE ("posthog_insightvariable"."team_id" =
           (SELECT U0."parent_team_id" AS "parent_team_id"
            FROM "posthog_team" U0
            WHERE U0."id" = 99999
            LIMIT 1)
         OR ("posthog_team"."parent_team_id" IS NULL
             AND "posthog_insightvariable"."team_id" = 99999))
  ORDER BY "posthog_insightvariable"."name" ASC
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.16
  '''
  SELECT "customer_analytics_teamcustomeranalyticsconfig"."team_id",
         "customer_analytics_teamcustomeranalyticsconfig"."activity_event",
         "customer_analytics_teamcustomeranalyticsconfig"."signup_pageview_event",
         "customer_analytics_teamcustomeranalyticsconfig"."signup_event",
         "customer_analytics_teamcustomeranalyticsconfig"."subscription_event",
         "customer_analytics_teamcustomeranalyticsconfig"."payment_event",
         "customer_analytics_teamcustomeranalyticsconfig"."account_group_type_index"
  FROM "customer_analytics_teamcustomeranalyticsconfig"
  WHERE "customer_analytics_teamcustomeranalyticsconfig"."team_id" = 99999
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.16
  '''
  SELECT "customer_analytics_teamcustomeranalyticsconfig"."account_group_type_index" AS "account_group_type_index"
  FROM "customer_analytics_teamcustomeranalyticsconfig"
  WHERE "customer_analytics_teamcustomeranalyticsconfig"."team_id" = 99999
  ORDER BY "customer_analytics_teamcustomeranalyticsconfig"."team_id" ASC
  LIMIT 1
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.17
  '''
  SELECT "customer_analytics_teamcustomeranalyticsconfig"."team_id",
         "customer_analytics_teamcustomeranalyticsconfig"."activity_event",
         "customer_analytics_teamcustomeranalyticsconfig"."signup_pageview_event",
         "customer_analytics_teamcustomeranalyticsconfig"."signup_event",
         "customer_analytics_teamcustomeranalyticsconfig"."subscription_event",
         "customer_analytics_teamcustomeranalyticsconfig"."payment_event",
         "customer_analytics_teamcustomeranalyticsconfig"."account_group_type_index"
  FROM "customer_analytics_teamcustomeranalyticsconfig"
  WHERE "customer_analytics_teamcustomeranalyticsconfig"."team_id" = 99999
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.18
  '''
  SELECT "posthog_dashboardtile"."dashboard_id" AS "dashboard_id"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  WHERE (NOT ("posthog_dashboardtile"."deleted"
              AND "posthog_dashboardtile"."deleted" IS NOT NULL)
         AND NOT ("posthog_dashboard"."deleted")
         AND "posthog_dashboardtile"."insight_id" = 99999)
  '''
# ---
<<<<<<< HEAD
# name: TestInsight.test_listing_insights_does_not_nplus1.17
=======
# name: TestInsight.test_listing_insights_does_not_nplus1.19
>>>>>>> a7bc7cd8e56 (test(backend): update query snapshots)
  '''
  SELECT "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."last_refresh",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."variables",
         "posthog_dashboard"."breakdown_colors",
         "posthog_dashboard"."data_color_theme_id",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboard"."quick_filter_ids",
         "posthog_dashboard"."customization",
         "posthog_dashboard"."deprecated_tags",
         "posthog_dashboard"."tags",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared"
  FROM "posthog_dashboard"
  WHERE (NOT ("posthog_dashboard"."deleted")
         AND "posthog_dashboard"."id" IN (1,
                                          2,
                                          3,
                                          4,
                                          5 /* ... */))
  '''
# ---
<<<<<<< HEAD
# name: TestInsight.test_listing_insights_does_not_nplus1.18
  '''
  SELECT "posthog_tag"."name" AS "tag__name"
  FROM "posthog_taggeditem"
  INNER JOIN "posthog_tag" ON ("posthog_taggeditem"."tag_id" = "posthog_tag"."id")
  WHERE "posthog_taggeditem"."insight_id" = 99999
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.19
  '''
  SELECT COUNT(*) AS "__count"
  FROM "posthog_dashboarditem"
  WHERE NOT ("posthog_dashboarditem"."deleted")
  '''
# ---
=======
>>>>>>> a7bc7cd8e56 (test(backend): update query snapshots)
# name: TestInsight.test_listing_insights_does_not_nplus1.2
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."parent_team_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."onboarding_tasks",
         "posthog_team"."ingested_event",
         "posthog_team"."ingested_production_event",
         "posthog_team"."ingested_production_event_last_checked_at",
         "posthog_team"."person_processing_opt_out",
         "posthog_team"."secret_api_token",
         "posthog_team"."secret_api_token_backup",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_recording_masking_config",
         "posthog_team"."session_recording_url_trigger_config",
         "posthog_team"."session_recording_url_blocklist_config",
         "posthog_team"."session_recording_event_trigger_config",
         "posthog_team"."session_recording_trigger_match_type_config",
         "posthog_team"."session_recording_trigger_groups",
         "posthog_team"."session_replay_config",
         "posthog_team"."session_recording_retention_period",
         "posthog_team"."event_retention_months",
         "posthog_team"."conversations_enabled",
         "posthog_team"."conversations_settings",
         "posthog_team"."proactive_tasks_enabled",
         "posthog_team"."survey_config",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."product_tours_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."capture_dead_clicks",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."logs_settings",
         "posthog_team"."llm_gateway_enabled_at",
         "posthog_team"."llm_gateway_revoked_at",
         "posthog_team"."llm_gateway_overspend_allowance_usd",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."receive_org_level_activity_logs",
         "posthog_team"."web_analytics_pre_aggregated_tables_enabled",
         "posthog_team"."web_analytics_pre_aggregated_tables_version",
         "posthog_team"."flags_persistence_default",
         "posthog_team"."feature_flag_confirmation_enabled",
         "posthog_team"."feature_flag_confirmation_message",
         "posthog_team"."default_evaluation_environments_enabled",
         "posthog_team"."require_evaluation_environment_tags",
         "posthog_team"."default_evaluation_contexts_enabled",
         "posthog_team"."require_evaluation_contexts",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."human_friendly_comparison_periods",
         "posthog_team"."cookieless_server_hash_mode",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."default_data_theme",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at",
         "posthog_team"."api_query_rate_limit",
         "posthog_team"."drop_events_older_than",
         "posthog_team"."base_currency",
         "posthog_team"."experiment_recalculation_time",
         "posthog_team"."default_experiment_confidence_level",
         "posthog_team"."default_experiment_stats_method",
         "posthog_team"."business_model",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."is_active",
         "posthog_organization"."is_not_active_reason",
         "posthog_organization"."session_cookie_age",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."is_ai_data_processing_approved",
         "posthog_organization"."is_ai_training_opted_in",
         "posthog_organization"."is_ai_training_locked",
         "posthog_organization"."is_ai_training_cta_shown",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."enforce_verified_domains",
         "posthog_organization"."members_can_invite",
         "posthog_organization"."members_can_create_projects",
         "posthog_organization"."members_can_use_personal_api_keys",
         "posthog_organization"."members_can_see_org_members",
         "posthog_organization"."allow_publicly_shared_resources",
         "posthog_organization"."read_only_mcp_access",
         "posthog_organization"."default_role_id",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."default_experiment_stats_method",
         "posthog_organization"."default_anonymize_ips",
         "posthog_organization"."is_hipaa",
         "posthog_organization"."is_pending_deletion",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."has_active_subscription",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."is_platform"
  FROM "posthog_team"
  INNER JOIN "posthog_organization" ON ("posthog_team"."organization_id" = "posthog_organization"."id")
  WHERE "posthog_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.20
  '''
<<<<<<< HEAD
=======
  SELECT "posthog_tag"."name" AS "tag__name"
  FROM "posthog_taggeditem"
  INNER JOIN "posthog_tag" ON ("posthog_taggeditem"."tag_id" = "posthog_tag"."id")
  WHERE "posthog_taggeditem"."insight_id" = 99999
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.21
  '''
  SELECT COUNT(*) AS "__count"
  FROM "posthog_dashboarditem"
  WHERE NOT ("posthog_dashboarditem"."deleted")
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.22
  '''
>>>>>>> a7bc7cd8e56 (test(backend): update query snapshots)
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."credentials_reviewed_at",
         "posthog_user"."requested_2fa_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."is_active",
         "posthog_user"."role_at_organization",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."allow_impersonation",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."allow_sidebar_suggestions",
         "posthog_user"."shortcut_position",
         "posthog_user"."passkeys_enabled_for_2fa",
         "posthog_user"."hide_mcp_hints",
         "posthog_user"."ui_configuration",
         "posthog_user"."onboarding_skipped_at",
         "posthog_user"."onboarding_skipped_reason",
         "posthog_user"."onboarding_skipped_organization_id",
         "posthog_user"."onboarding_delegated_to_invite_id",
         "posthog_user"."onboarding_delegated_to_organization_id",
         "posthog_user"."onboarding_delegation_accepted_at",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_user"
  WHERE ("posthog_user"."is_active"
         AND "posthog_user"."id" = 99999)
  '''
# ---
<<<<<<< HEAD
# name: TestInsight.test_listing_insights_does_not_nplus1.21
=======
# name: TestInsight.test_listing_insights_does_not_nplus1.23
>>>>>>> a7bc7cd8e56 (test(backend): update query snapshots)
  '''
  SELECT "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."is_active",
         "posthog_organization"."is_not_active_reason",
         "posthog_organization"."session_cookie_age",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."is_ai_data_processing_approved",
         "posthog_organization"."is_ai_training_opted_in",
         "posthog_organization"."is_ai_training_locked",
         "posthog_organization"."is_ai_training_cta_shown",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."enforce_verified_domains",
         "posthog_organization"."members_can_invite",
         "posthog_organization"."members_can_create_projects",
         "posthog_organization"."members_can_use_personal_api_keys",
         "posthog_organization"."members_can_see_org_members",
         "posthog_organization"."allow_publicly_shared_resources",
         "posthog_organization"."read_only_mcp_access",
         "posthog_organization"."default_role_id",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."default_experiment_stats_method",
         "posthog_organization"."default_anonymize_ips",
         "posthog_organization"."is_hipaa",
         "posthog_organization"."is_pending_deletion",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."has_active_subscription",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."is_platform"
  FROM "posthog_organization"
  WHERE "posthog_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
<<<<<<< HEAD
# name: TestInsight.test_listing_insights_does_not_nplus1.22
=======
# name: TestInsight.test_listing_insights_does_not_nplus1.24
>>>>>>> a7bc7cd8e56 (test(backend): update query snapshots)
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."parent_team_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."onboarding_tasks",
         "posthog_team"."ingested_event",
         "posthog_team"."ingested_production_event",
         "posthog_team"."ingested_production_event_last_checked_at",
         "posthog_team"."person_processing_opt_out",
         "posthog_team"."secret_api_token",
         "posthog_team"."secret_api_token_backup",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_recording_masking_config",
         "posthog_team"."session_recording_url_trigger_config",
         "posthog_team"."session_recording_url_blocklist_config",
         "posthog_team"."session_recording_event_trigger_config",
         "posthog_team"."session_recording_trigger_match_type_config",
         "posthog_team"."session_recording_trigger_groups",
         "posthog_team"."session_replay_config",
         "posthog_team"."session_recording_retention_period",
         "posthog_team"."event_retention_months",
         "posthog_team"."conversations_enabled",
         "posthog_team"."conversations_settings",
         "posthog_team"."proactive_tasks_enabled",
         "posthog_team"."survey_config",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."product_tours_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."capture_dead_clicks",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."logs_settings",
         "posthog_team"."llm_gateway_enabled_at",
         "posthog_team"."llm_gateway_revoked_at",
         "posthog_team"."llm_gateway_overspend_allowance_usd",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."receive_org_level_activity_logs",
         "posthog_team"."web_analytics_pre_aggregated_tables_enabled",
         "posthog_team"."web_analytics_pre_aggregated_tables_version",
         "posthog_team"."flags_persistence_default",
         "posthog_team"."feature_flag_confirmation_enabled",
         "posthog_team"."feature_flag_confirmation_message",
         "posthog_team"."default_evaluation_environments_enabled",
         "posthog_team"."require_evaluation_environment_tags",
         "posthog_team"."default_evaluation_contexts_enabled",
         "posthog_team"."require_evaluation_contexts",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."human_friendly_comparison_periods",
         "posthog_team"."cookieless_server_hash_mode",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."default_data_theme",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at",
         "posthog_team"."api_query_rate_limit",
         "posthog_team"."drop_events_older_than",
         "posthog_team"."base_currency",
         "posthog_team"."experiment_recalculation_time",
         "posthog_team"."default_experiment_confidence_level",
         "posthog_team"."default_experiment_stats_method",
         "posthog_team"."business_model",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."is_active",
         "posthog_organization"."is_not_active_reason",
         "posthog_organization"."session_cookie_age",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."is_ai_data_processing_approved",
         "posthog_organization"."is_ai_training_opted_in",
         "posthog_organization"."is_ai_training_locked",
         "posthog_organization"."is_ai_training_cta_shown",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."enforce_verified_domains",
         "posthog_organization"."members_can_invite",
         "posthog_organization"."members_can_create_projects",
         "posthog_organization"."members_can_use_personal_api_keys",
         "posthog_organization"."members_can_see_org_members",
         "posthog_organization"."allow_publicly_shared_resources",
         "posthog_organization"."read_only_mcp_access",
         "posthog_organization"."default_role_id",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."default_experiment_stats_method",
         "posthog_organization"."default_anonymize_ips",
         "posthog_organization"."is_hipaa",
         "posthog_organization"."is_pending_deletion",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."has_active_subscription",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."is_platform"
  FROM "posthog_team"
  INNER JOIN "posthog_organization" ON ("posthog_team"."organization_id" = "posthog_organization"."id")
  WHERE "posthog_team"."id" = 99999
  LIMIT 21
  '''
# ---
<<<<<<< HEAD
# name: TestInsight.test_listing_insights_does_not_nplus1.23
=======
# name: TestInsight.test_listing_insights_does_not_nplus1.25
>>>>>>> a7bc7cd8e56 (test(backend): update query snapshots)
  '''
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organizationmembership"."invited_by_id",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."is_active",
         "posthog_organization"."is_not_active_reason",
         "posthog_organization"."session_cookie_age",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."is_ai_data_processing_approved",
         "posthog_organization"."is_ai_training_opted_in",
         "posthog_organization"."is_ai_training_locked",
         "posthog_organization"."is_ai_training_cta_shown",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."enforce_verified_domains",
         "posthog_organization"."members_can_invite",
         "posthog_organization"."members_can_create_projects",
         "posthog_organization"."members_can_use_personal_api_keys",
         "posthog_organization"."members_can_see_org_members",
         "posthog_organization"."allow_publicly_shared_resources",
         "posthog_organization"."read_only_mcp_access",
         "posthog_organization"."default_role_id",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."default_experiment_stats_method",
         "posthog_organization"."default_anonymize_ips",
         "posthog_organization"."is_hipaa",
         "posthog_organization"."is_pending_deletion",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."has_active_subscription",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."is_platform"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE ("posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "posthog_organizationmembership"."user_id" = 99999)
  LIMIT 21
  '''
# ---
<<<<<<< HEAD
# name: TestInsight.test_listing_insights_does_not_nplus1.24
=======
# name: TestInsight.test_listing_insights_does_not_nplus1.26
>>>>>>> a7bc7cd8e56 (test(backend): update query snapshots)
  '''
  SELECT "ee_accesscontrol"."id",
         "ee_accesscontrol"."team_id",
         "ee_accesscontrol"."access_level",
         "ee_accesscontrol"."resource",
         "ee_accesscontrol"."resource_id",
         "ee_accesscontrol"."organization_member_id",
         "ee_accesscontrol"."role_id",
         "ee_accesscontrol"."created_by_id",
         "ee_accesscontrol"."created_at",
         "ee_accesscontrol"."updated_at",
         "posthog_team"."organization_id" AS "_team_organization_id"
  FROM "ee_accesscontrol"
  INNER JOIN "posthog_team" ON ("ee_accesscontrol"."team_id" = "posthog_team"."id")
  LEFT OUTER JOIN "posthog_organizationmembership" ON ("ee_accesscontrol"."organization_member_id" = "posthog_organizationmembership"."id")
  WHERE (("ee_accesscontrol"."organization_member_id" IS NULL
          AND "ee_accesscontrol"."role_id" IS NULL
          AND "ee_accesscontrol"."team_id" = 99999)
         OR ("posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
             AND "posthog_organizationmembership"."user_id" = 99999
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999))
  '''
# ---
<<<<<<< HEAD
# name: TestInsight.test_listing_insights_does_not_nplus1.25
=======
# name: TestInsight.test_listing_insights_does_not_nplus1.27
>>>>>>> a7bc7cd8e56 (test(backend): update query snapshots)
  '''
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organizationmembership"."invited_by_id",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."is_active",
         "posthog_organization"."is_not_active_reason",
         "posthog_organization"."session_cookie_age",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."is_ai_data_processing_approved",
         "posthog_organization"."is_ai_training_opted_in",
         "posthog_organization"."is_ai_training_locked",
         "posthog_organization"."is_ai_training_cta_shown",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."enforce_verified_domains",
         "posthog_organization"."members_can_invite",
         "posthog_organization"."members_can_create_projects",
         "posthog_organization"."members_can_use_personal_api_keys",
         "posthog_organization"."members_can_see_org_members",
         "posthog_organization"."allow_publicly_shared_resources",
         "posthog_organization"."read_only_mcp_access",
         "posthog_organization"."default_role_id",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."default_experiment_stats_method",
         "posthog_organization"."default_anonymize_ips",
         "posthog_organization"."is_hipaa",
         "posthog_organization"."is_pending_deletion",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."has_active_subscription",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."is_platform"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE "posthog_organizationmembership"."user_id" = 99999
  '''
# ---
<<<<<<< HEAD
# name: TestInsight.test_listing_insights_does_not_nplus1.26
=======
# name: TestInsight.test_listing_insights_does_not_nplus1.28
>>>>>>> a7bc7cd8e56 (test(backend): update query snapshots)
  '''
  SELECT COUNT(*) AS "__count"
  FROM "posthog_dashboarditem"
  INNER JOIN "posthog_team" ON ("posthog_dashboarditem"."team_id" = "posthog_team"."id")
  WHERE ("posthog_team"."project_id" = 99999
         AND NOT ("posthog_dashboarditem"."deleted"))
  '''
# ---
<<<<<<< HEAD
# name: TestInsight.test_listing_insights_does_not_nplus1.27
=======
# name: TestInsight.test_listing_insights_does_not_nplus1.29
>>>>>>> a7bc7cd8e56 (test(backend): update query snapshots)
  '''
  SELECT "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."query",
         "posthog_dashboarditem"."query_metadata",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at",
         "posthog_dashboarditem"."deprecated_tags",
         "posthog_dashboarditem"."tags",
  
    (SELECT U0."last_viewed_at" AS "last_viewed_at"
     FROM "posthog_insightviewed" U0
     WHERE U0."insight_id" = ("posthog_dashboarditem"."id")
     ORDER BY 1 DESC
     LIMIT 1) AS "last_viewed_at",
         "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."parent_team_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."onboarding_tasks",
         "posthog_team"."ingested_event",
         "posthog_team"."ingested_production_event",
         "posthog_team"."ingested_production_event_last_checked_at",
         "posthog_team"."person_processing_opt_out",
         "posthog_team"."secret_api_token",
         "posthog_team"."secret_api_token_backup",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_recording_masking_config",
         "posthog_team"."session_recording_url_trigger_config",
         "posthog_team"."session_recording_url_blocklist_config",
         "posthog_team"."session_recording_event_trigger_config",
         "posthog_team"."session_recording_trigger_match_type_config",
         "posthog_team"."session_recording_trigger_groups",
         "posthog_team"."session_replay_config",
         "posthog_team"."session_recording_retention_period",
         "posthog_team"."event_retention_months",
         "posthog_team"."conversations_enabled",
         "posthog_team"."conversations_settings",
         "posthog_team"."proactive_tasks_enabled",
         "posthog_team"."survey_config",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."product_tours_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."capture_dead_clicks",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."logs_settings",
         "posthog_team"."llm_gateway_enabled_at",
         "posthog_team"."llm_gateway_revoked_at",
         "posthog_team"."llm_gateway_overspend_allowance_usd",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."receive_org_level_activity_logs",
         "posthog_team"."web_analytics_pre_aggregated_tables_enabled",
         "posthog_team"."web_analytics_pre_aggregated_tables_version",
         "posthog_team"."flags_persistence_default",
         "posthog_team"."feature_flag_confirmation_enabled",
         "posthog_team"."feature_flag_confirmation_message",
         "posthog_team"."default_evaluation_environments_enabled",
         "posthog_team"."require_evaluation_environment_tags",
         "posthog_team"."default_evaluation_contexts_enabled",
         "posthog_team"."require_evaluation_contexts",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."human_friendly_comparison_periods",
         "posthog_team"."cookieless_server_hash_mode",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."default_data_theme",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at",
         "posthog_team"."api_query_rate_limit",
         "posthog_team"."revenue_tracking_config",
         "posthog_team"."drop_events_older_than",
         "posthog_team"."base_currency",
         "posthog_team"."experiment_recalculation_time",
         "posthog_team"."default_experiment_confidence_level",
         "posthog_team"."default_experiment_stats_method",
         "posthog_team"."business_model",
         "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."credentials_reviewed_at",
         "posthog_user"."requested_password_reset_at",
         "posthog_user"."requested_2fa_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."is_active",
         "posthog_user"."role_at_organization",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."allow_impersonation",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."allow_sidebar_suggestions",
         "posthog_user"."shortcut_position",
         "posthog_user"."passkeys_enabled_for_2fa",
         "posthog_user"."hide_mcp_hints",
         "posthog_user"."ui_configuration",
         "posthog_user"."onboarding_skipped_at",
         "posthog_user"."onboarding_skipped_reason",
         "posthog_user"."onboarding_skipped_organization_id",
         "posthog_user"."onboarding_delegated_to_invite_id",
         "posthog_user"."onboarding_delegated_to_organization_id",
         "posthog_user"."onboarding_delegation_accepted_at",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_dashboarditem"
  INNER JOIN "posthog_team" ON ("posthog_dashboarditem"."team_id" = "posthog_team"."id")
  LEFT OUTER JOIN "posthog_user" ON ("posthog_dashboarditem"."created_by_id" = "posthog_user"."id")
  WHERE ("posthog_team"."project_id" = 99999
         AND NOT ("posthog_dashboarditem"."deleted"))
  ORDER BY "posthog_dashboarditem"."order" ASC
  LIMIT 100
  '''
# ---
<<<<<<< HEAD
# name: TestInsight.test_listing_insights_does_not_nplus1.28
  '''
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."deleted"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  WHERE (NOT ("posthog_dashboardtile"."deleted"
              AND "posthog_dashboardtile"."deleted" IS NOT NULL)
         AND NOT ("posthog_dashboard"."deleted")
         AND "posthog_dashboardtile"."insight_id" IN (1,
                                                      2,
                                                      3,
                                                      4,
                                                      5 /* ... */))
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.29
  '''
  SELECT "posthog_taggeditem"."id",
         "posthog_taggeditem"."tag_id",
         "posthog_taggeditem"."dashboard_id",
         "posthog_taggeditem"."insight_id",
         "posthog_taggeditem"."event_definition_id",
         "posthog_taggeditem"."property_definition_id",
         "posthog_taggeditem"."action_id",
         "posthog_taggeditem"."feature_flag_id",
         "posthog_taggeditem"."experiment_saved_metric_id",
         "posthog_taggeditem"."ticket_id",
         "posthog_taggeditem"."account_id",
         "posthog_taggeditem"."endpoint_id",
         "posthog_taggeditem"."replay_scanner_id"
  FROM "posthog_taggeditem"
  WHERE "posthog_taggeditem"."insight_id" IN (1,
                                              2,
                                              3,
                                              4,
                                              5 /* ... */)
  '''
# ---
=======
>>>>>>> a7bc7cd8e56 (test(backend): update query snapshots)
# name: TestInsight.test_listing_insights_does_not_nplus1.3
  '''
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organizationmembership"."invited_by_id",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."is_active",
         "posthog_organization"."is_not_active_reason",
         "posthog_organization"."session_cookie_age",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."is_ai_data_processing_approved",
         "posthog_organization"."is_ai_training_opted_in",
         "posthog_organization"."is_ai_training_locked",
         "posthog_organization"."is_ai_training_cta_shown",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."enforce_verified_domains",
         "posthog_organization"."members_can_invite",
         "posthog_organization"."members_can_create_projects",
         "posthog_organization"."members_can_use_personal_api_keys",
         "posthog_organization"."members_can_see_org_members",
         "posthog_organization"."allow_publicly_shared_resources",
         "posthog_organization"."read_only_mcp_access",
         "posthog_organization"."default_role_id",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."default_experiment_stats_method",
         "posthog_organization"."default_anonymize_ips",
         "posthog_organization"."is_hipaa",
         "posthog_organization"."is_pending_deletion",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."has_active_subscription",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."is_platform"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE ("posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "posthog_organizationmembership"."user_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.30
  '''
<<<<<<< HEAD
=======
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."deleted"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  WHERE (NOT ("posthog_dashboardtile"."deleted"
              AND "posthog_dashboardtile"."deleted" IS NOT NULL)
         AND NOT ("posthog_dashboard"."deleted")
         AND "posthog_dashboardtile"."insight_id" IN (1,
                                                      2,
                                                      3,
                                                      4,
                                                      5 /* ... */))
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.31
  '''
  SELECT "posthog_taggeditem"."id",
         "posthog_taggeditem"."tag_id",
         "posthog_taggeditem"."dashboard_id",
         "posthog_taggeditem"."insight_id",
         "posthog_taggeditem"."event_definition_id",
         "posthog_taggeditem"."property_definition_id",
         "posthog_taggeditem"."action_id",
         "posthog_taggeditem"."feature_flag_id",
         "posthog_taggeditem"."experiment_saved_metric_id",
         "posthog_taggeditem"."ticket_id",
         "posthog_taggeditem"."account_id",
         "posthog_taggeditem"."endpoint_id",
         "posthog_taggeditem"."replay_scanner_id"
  FROM "posthog_taggeditem"
  WHERE "posthog_taggeditem"."insight_id" IN (1,
                                              2,
                                              3,
                                              4,
                                              5 /* ... */)
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.32
  '''
>>>>>>> a7bc7cd8e56 (test(backend): update query snapshots)
  SELECT "posthog_taggeditem"."id",
         "posthog_taggeditem"."tag_id",
         "posthog_taggeditem"."dashboard_id",
         "posthog_taggeditem"."insight_id",
         "posthog_taggeditem"."event_definition_id",
         "posthog_taggeditem"."property_definition_id",
         "posthog_taggeditem"."action_id",
         "posthog_taggeditem"."feature_flag_id",
         "posthog_taggeditem"."experiment_saved_metric_id",
         "posthog_taggeditem"."ticket_id",
         "posthog_taggeditem"."account_id",
         "posthog_taggeditem"."endpoint_id",
         "posthog_taggeditem"."replay_scanner_id",
         "posthog_tag"."id",
         "posthog_tag"."name",
         "posthog_tag"."team_id"
  FROM "posthog_taggeditem"
  INNER JOIN "posthog_tag" ON ("posthog_taggeditem"."tag_id" = "posthog_tag"."id")
  WHERE "posthog_taggeditem"."insight_id" IN (1,
                                              2,
                                              3,
                                              4,
                                              5 /* ... */)
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.4
  '''
  SELECT "ee_accesscontrol"."id",
         "ee_accesscontrol"."team_id",
         "ee_accesscontrol"."access_level",
         "ee_accesscontrol"."resource",
         "ee_accesscontrol"."resource_id",
         "ee_accesscontrol"."organization_member_id",
         "ee_accesscontrol"."role_id",
         "ee_accesscontrol"."created_by_id",
         "ee_accesscontrol"."created_at",
         "ee_accesscontrol"."updated_at",
         "posthog_team"."organization_id" AS "_team_organization_id"
  FROM "ee_accesscontrol"
  INNER JOIN "posthog_team" ON ("ee_accesscontrol"."team_id" = "posthog_team"."id")
  LEFT OUTER JOIN "posthog_organizationmembership" ON ("ee_accesscontrol"."organization_member_id" = "posthog_organizationmembership"."id")
  WHERE (("ee_accesscontrol"."organization_member_id" IS NULL
          AND "ee_accesscontrol"."role_id" IS NULL
          AND "ee_accesscontrol"."team_id" = 99999)
         OR ("posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
             AND "posthog_organizationmembership"."user_id" = 99999
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999))
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.5
  '''
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organizationmembership"."invited_by_id",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."is_active",
         "posthog_organization"."is_not_active_reason",
         "posthog_organization"."session_cookie_age",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."is_ai_data_processing_approved",
         "posthog_organization"."is_ai_training_opted_in",
         "posthog_organization"."is_ai_training_locked",
         "posthog_organization"."is_ai_training_cta_shown",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."enforce_verified_domains",
         "posthog_organization"."members_can_invite",
         "posthog_organization"."members_can_create_projects",
         "posthog_organization"."members_can_use_personal_api_keys",
         "posthog_organization"."members_can_see_org_members",
         "posthog_organization"."allow_publicly_shared_resources",
         "posthog_organization"."read_only_mcp_access",
         "posthog_organization"."default_role_id",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."default_experiment_stats_method",
         "posthog_organization"."default_anonymize_ips",
         "posthog_organization"."is_hipaa",
         "posthog_organization"."is_pending_deletion",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."has_active_subscription",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."is_platform"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE "posthog_organizationmembership"."user_id" = 99999
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.6
  '''
  SELECT "posthog_dashboard"."id" AS "id"
  FROM "posthog_dashboard"
  INNER JOIN "posthog_team" ON ("posthog_dashboard"."team_id" = "posthog_team"."id")
  WHERE (NOT ("posthog_dashboard"."deleted")
         AND ("posthog_dashboard"."team_id" =
                (SELECT U0."parent_team_id" AS "parent_team_id"
                 FROM "posthog_team" U0
                 WHERE U0."id" = 99999
                 LIMIT 1)
              OR ("posthog_team"."parent_team_id" IS NULL
                  AND "posthog_dashboard"."team_id" = 99999))
         AND "posthog_dashboard"."id" IN (1,
                                          2,
                                          3,
                                          4,
                                          5 /* ... */))
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.7
  '''
  SELECT "posthog_dashboard"."id" AS "id",
         "posthog_dashboard"."name" AS "name"
  FROM "posthog_dashboard"
  WHERE (NOT ("posthog_dashboard"."deleted")
         AND "posthog_dashboard"."id" IN (1,
                                          2,
                                          3,
                                          4,
                                          5 /* ... */))
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.8
  '''
  SELECT COUNT(*) AS "__count"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  WHERE (NOT ("posthog_dashboardtile"."deleted"
              AND "posthog_dashboardtile"."deleted" IS NOT NULL)
         AND NOT ("posthog_dashboard"."deleted")
         AND "posthog_dashboardtile"."dashboard_id" = 99999
         AND NOT ("posthog_dashboardtile"."deleted"
                  AND "posthog_dashboardtile"."deleted" IS NOT NULL))
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.9
  '''
  SELECT "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."last_refresh",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."variables",
         "posthog_dashboard"."breakdown_colors",
         "posthog_dashboard"."data_color_theme_id",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboard"."quick_filter_ids",
         "posthog_dashboard"."customization",
         "posthog_dashboard"."deprecated_tags",
         "posthog_dashboard"."tags",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared"
  FROM "posthog_dashboard"
  WHERE (NOT ("posthog_dashboard"."deleted")
         AND "posthog_dashboard"."id" IN (1,
                                          2,
                                          3,
                                          4,
                                          5 /* ... */))
  '''
# ---
